2010-09-07  Stas Boukarev  <stassats@gmail.com>

	* swank-c-p-c.lisp (untokenize-completion): Take an optional
	argument "delimiter".
	(longest-compound-prefix): Pass delimiter to untokenize-completion.

2010-09-04  Stas Boukarev  <stassats@gmail.com>

	* swank-fuzzy.lisp (*fuzzy-completion-...*): Change defparameter
	to defvar for easier customization.

2010-09-03  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-search-property-change): XEmacs may return
	nil on previous/next-single-char-property-change, don't pass it to
	goto-char.

2010-09-03  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-mode-end-of-defun)
	(slime-repl-mode-beginning-of-defun): Take an optional argument
	which specifies how many defuns it should move. GNU Emacs catches
	wrong-number-of-arguments condition and does this by itself, but
	XEmacs doesn't.

2010-09-03  Helmut Eller  <heller@common-lisp.net>

	* swank-kawa.scm (%%runnable): Update for changes in SVN version.

2010-08-21  Stas Boukarev  <stassats@gmail.com>

	* slime-fuzzy.el (slime-fuzzy-choices-buffer): XEmacs compatibility.

2010-08-21  Helmut Eller  <heller@common-lisp.net>

	* slime-repl.el: Specify :on-unload action.

2010-08-21  Anton Kovalenko <anton@sw4me.com>

	Add support to save snapshots in backround.

	* swank-snapshot.lisp (background-save-snapshot): New.
	(resurrect): Initialize repl streams.
	* slime-snapshot.el (slime-snapshot): With prefix-arg perform
	saving in background.  Also ask before overwriting existing files.

2010-08-13  Helmut Eller  <heller@common-lisp.net>

	Fix slime-restore.

	* swank-snapshot.lisp (swank-snapshot::resurrect): Adapted to
	new MAKE-CONNECTION.

2010-07-29  Stas Boukarev  <stassats@gmail.com>

	* slime-c-p-c.el (slime-complete-form): Limit `looking-back' too.

2010-07-28  Stas Boukarev  <stassats@gmail.com>

	* slime-presentations.el (slime-copy-presentation-to-repl): Limit
	looking-back to one character before point. Solves long freeze on a